2015-02-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Fixed the bug: "#280 Doc pages cut off on right side"
    Thanks to Joseph Watson.

  * doc/gputils.lyx, header/Makefile.am, header/Makefile.in,
    header/*.inc, libgputils/gpcfg-table.c, libgputils/gpprocessor.c,
    libgputils/gpreg-table.c, lkr/Makefile.am, lkr/Makefile.in,
    lkr/*.lkr:
    Updated based on the mplabx-2.30.

2015-02-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpsystem.c:
    More accurate error messages.

2015-02-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpsystem.c:
    More accurate investigations.

2015-02-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/testsuite/test-regression, gpasm/gpasm.c,
    gplink/testsuite/test, gplink/gplink.c, gputils/testsuite/test,
    gputils/gpdasm.c, gputils/gpstrip.c, gputils/gpvo.c,
    libgputils/gpsystem.c, libgputils/gpsystem.h, man/gpasm.1.in,
    man/gpdasm.1.in, man/gplink.1.in, man/gpstrip.1.in, man/gpvo.1.in:
    Fixed the bug: "#277 GPASM outputs in the wrong directory"
    Thanks to Philippe Paternotte.

  * gpasm/scan.l, gpasm/util.c, gputils/gplib.c, gputils/gpvc.c:
    Changed text format.

2015-01-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c:
    Fixed the bug: "#279 __IDLOCS does not work for p18f26k80"
    Thanks to Pascal.

2015-01-17  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/coff.c, gplink/parse.y, gplink/scan.l:
    Fixed the bug: "#278 GPLINK syntax error in .LKR"
    Thanks to Philippe Paternotte.

2015-01-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Added the macro-doc.patch. Thanks to Joe Pfeiffer.

2014-12-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.h.in, gpasm/parse.y, gpasm/scan.l:
    Fixed the bug: "#276 Empty macros cause segfaults with gputils-1.4.0-1"